add glag and pages

--- a/src/index.html
+++ b/src/index.html
@@ -13,33 +13,35 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/css/intlTelInput.css"> -->
+<link rel="stylesheet" href="https://www.jqueryscript.net/demo/country-picker-flags/build/css/countrySelect.css">
+<link rel="stylesheet" href="https://www.jqueryscript.net/demo/country-picker-flags/build/css/demo.css">
+
 </head>
+
 <body>
   <app-root></app-root>
-  <script>
-
-
-
-// var i=0
-
-// function x() {
-
-//   i++;
-//   document.getElementById("animate-area").style.backgroundPosition=i+"px";
   
-// }
-// setInterval(x,10)
 
-  </script>
+
+
+
+
+
 
  <script src="assets/index.js"></script> 
- <script
+
+ <!-- <script>
  type="module"
  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
- ></script>
+ </script>
  <script
  nomodule
  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
- ></script>
+ ></script> -->
+ <!-- <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/intlTelInput.min.js"></script> -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <script src="https://www.jqueryscript.net/demo/country-picker-flags/build/js/countrySelect.js"></script>
+
 </body>
 </html>
