--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>Vrnl</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="White-label sports betting software with a fully integrated casino platform offers a flexible solution for operators looking to enter the online gambling market. Vrnl platform allows operators to customize and rebrand the software to suit their unique needs and branding requirements">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="assets/imageedit_2_7304767917.png">
   <link
   rel="stylesheet"
