--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Betfair API | Sports Odds API | Betfair API - Odds Feed</title>
+  <title>VRNL is best sports online betting whitelabel provider in India and Bangladesh | Betfair Api provider |Casino provider</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
