--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,11 @@
   s0.parentNode.insertBefore(s1,s0);
   })();
   </script>
- <script type="text/javascript">
+ <!-- <script type="text/javascript">
   function googleTranslateElementInit() {
     new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
   }
-  </script>
+  </script> -->
   
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <!--End of Tawk.to Script-->
