--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <meta name="description" content="White-label sports betting software with a fully integrated casino platform offers a flexible solution for operators looking to enter the online gambling market. Vrnl platform allows operators to customize and rebrand the software to suit their unique needs and branding requirements">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="assets/imageedit_2_7304767917.png">
+  <meta name="keywords" content="api provider,api provider company,sport betting api,live score api,betting sites in india,score bet,live tv api,odds api sports, odds api,live casino online, top betting sites in india, top betting exchange sites, betgames,betgames india,online betgames,online betgames,horse racing betting sites,greyhound racing betting sites , Online betting, Sports betting, Casino games">
+
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -18,12 +20,7 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
-<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/css/intlTelInput.css"> -->
-<!-- <link rel="stylesheet" href="https://www.jqueryscript.net/demo/country-picker-flags/build/css/countrySelect.css"> -->
-<!-- <link rel="stylesheet" href="https://www.jqueryscript.net/demo/country-picker-flags/build/css/demo.css"> -->
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
-<!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+
 
 
 <!--Start of Tawk.to Script-->
@@ -38,15 +35,10 @@
   s0.parentNode.insertBefore(s1,s0);
   })();
   </script>
- <!-- <script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-  }
-  </script> -->
+
   
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <!--End of Tawk.to Script-->
-
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 <body>
