--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   referrerpolicy="no-referrer"
 />
 
-
+<meta name="google-site-verification" content="93xqYXaCi2bsHFO5k7if3wCp3fjz1CIPWFK9no2UDzQ" />
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
