--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,9 @@
   
 
 
+<script src="src/assets/sitemap.xml"></script>
 
-
-
+<script src="src/assets/robots.txt"></script>
 
 
   <!-- <script src="assets/index.js"></script>  -->
