--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="White-label sports betting software with a fully integrated casino platform offers a flexible solution for operators looking to enter the online gambling market. Vrnl platform allows operators to customize and rebrand the software to suit their unique needs and branding requirements">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="cache-control" content="no-store, max-age=0, must-revalidate">
+
   <link rel="icon" type="image/x-icon" href="assets/imageedit_2_7304767917.png">
   <meta name="keywords" content="api provider,api provider company,sport betting api,live score api,betting sites in india,score bet,live tv api,odds api sports, odds api,live casino online, top betting sites in india, top betting exchange sites, betgames,betgames india,online betgames,online betgames,horse racing betting sites,greyhound racing betting sites , Online betting, Sports betting, Casino games">
 
