--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>VRNL is the best sports online betting whitelabel provider in India and Bangladesh | Betfair Api provider |Casino provider</title>
+  <title>VRNL is the best sports betting software provider in india and Bangladesh | Betfair Api provider |Casino provider</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="White-label sports betting software with a fully integrated casino platform offers a flexible solution for operators looking to enter the online gambling market. Vrnl platform allows operators to customize and rebrand the software to suit their unique needs and branding requirements">
+  <meta name="description" content="VRNL is a leading sports betting software provider in India.
+   White-label sports betting software with a fully integrated casino platform offers a flexible solution for operators looking to enter the online gambling market. Vrnl platform allows operators to customize and rebrand the software to suit their unique needs and branding requirements">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="cache-control" content="no-store, max-age=0, must-revalidate">
 
   <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png">
-  <meta name="keywords" content="api provider,api provider company,sport betting api,live score api,betting sites in india,score bet,live tv api,odds api sports, odds api,live casino online, top betting sites in india, top betting exchange sites, betgames,betgames india,online betgames,online betgames,horse racing betting sites,greyhound racing betting sites , Online betting, Sports betting, Casino games">
+  <meta name="keywords" content="api provider,api provider company,sport betting api,live score api, betting sites in india,score bet,live tv api,odds api sports, odds api,live casino online, top betting sites in india, top betting exchange sites, betgames,betgames india,online betgames,online betgames,horse racing betting sites,greyhound racing betting sites , Online betting, Sports betting, Casino games,    sports betting software provider in india">
 
   <link
   rel="stylesheet"
