--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
 
   <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png">
   <meta name="keywords" content="Sports Betting software provider company, cricket Betting software provider, horse racing Betting software provider, Sports betting software provider,
-  iGaming Platform,Casino,Online Casino,Virtual Games,API service provider">
+  iGaming Platform,Casino,Online Casino,Virtual Games,API service provider,eSports Betting Software
+  ">
 
   <link
   rel="stylesheet"
