--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png">
   <meta name="keywords" content="Sports Betting software provider company, cricket Betting software provider, horse racing Betting software provider, Sports betting software provider,
-  iGaming Platform,Casino,Online Casino,Virtual Games,API service provider,eSports Betting Software
+  iGaming Platform,Casino,Online Casino,Virtual Games,API service provider,eSports Betting Software, Online Exchange software, Betting Providers, Casino Providers,Online Exchange software
   ">
 
   <link
