--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
       http-equiv="cache-control"
       content="no-store, max-age=0, must-revalidate"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png" />
     <link rel="canonical" href="https://vrnl.net/#/" />
 
