--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,16 @@
     <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png" />
     <link rel="canonical" href="https://vrnl.net/#/" />
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    />
+
+   
+
     <meta
       name="keywords"
       content="Sports Betting software provider company, cricket Betting software provider, horse racing Betting software provider, Sports betting software provider,
