--- a/src/index.html
+++ b/src/index.html
@@ -20,21 +20,23 @@
       http-equiv="cache-control"
       content="no-store, max-age=0, must-revalidate"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" async>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet"> 
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
+    <link media="handheld" href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet" async>
 
     <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png" />
     <link rel="canonical" href="https://vrnl.net/#/" />
 
     <link
+    media="handheld"
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
+
     />
 
    
@@ -47,11 +49,13 @@
     />
 
     <link
+    media="handheld"
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+      async
     />
 
     <meta
@@ -75,9 +79,11 @@
     </script>
 
     <script
+    media="handheld"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
+      async
     ></script>
 
     <!-- Google anyaltics -->
@@ -93,8 +99,9 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-2KBE1FKGMX");
+      gtag("config", "G-2KBE1FKGMX");    
     </script>
+    
   </head>
   <body>
     <app-root></app-root>
