--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <meta charset="utf-8">
-  <title>
-    VRNL is the best sports betting software provider company in India and
-    Bangladesh | Exchange | Whitelabel provider
-  </title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="VRNL is a prominent sports betting software provider in India. Their white-label sports betting software, coupled with a fully integrated casino platform, offers a flexible solution for operators seeking entry into the online betting market. The VRNL platform enables operators to customize and rebrand the software to align with their specific needs and branding requirements">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="cache-control" content="no-store, max-age=0, must-revalidate">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-
-  <style type="text/css">@font-face{font-family:'Jacques Francois Shadow';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/jacquesfrancoisshadow/v25/KR1FBtOz8PKTMk-kqdkLVrvR0ECFrB6Pin-2_p8Sunq35lLT.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
-
-  <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png">
-  <link rel="canonical" href="https://vrnl.net/#/">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-
- 
-
-  <meta name="keywords" content="Sports Betting software provider company, cricket Betting software provider, horse racing Betting software provider, Sports betting software provider,
-iGaming Platform,Casino,Online Casino,Virtual Games,API service provider,eSports Betting Software, Online Exchange software, Betting Providers, Casino Providers,Online Exchange software
-">
-
-
-
-  <meta name="google-site-verification" content="93xqYXaCi2bsHFO5k7if3wCp3fjz1CIPWFK9no2UDzQ">
-
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {},
-      Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"),
-        s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = "https://embed.tawk.to/651bb24110c0b2572487f8a1/1hbq30kna";
-      s1.charset = "UTF-8";
-      s1.setAttribute("crossorigin", "*");
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
-  <!-- Google anyaltics -->
-  <!-- Google tag (gtag.js) -->
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-2KBE1FKGMX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-2KBE1FKGMX");    
-  </script>
-  
-<link rel="stylesheet" href="styles.44c6a4f70a5a356f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.44c6a4f70a5a356f.css"></noscript></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.a403b9210c05899b.js" type="module"></script><script src="polyfills.fcce4ab93dde6bd5.js" type="module"></script><script src="scripts.fb2b52450d381335.js" defer></script><script src="main.63f07509a715e69b.js" type="module"></script>
-
-</body></html>
+<!DOCTYPE html><html lang="en"> <head> <meta charset="utf-8" /> <title> Vrnl is Top Sports Betting Software Provider in India and Bangladesh </title> <meta name="description" content="VRNL is a leading sports betting software provider in India. Their White Label sport bettng software, with an integrated casino platform, offers flexibility for operators. It allows customization to meet branding needs" /> <base href="/"/> <meta name="viewport" content="width=device-width, initial-scale=1" /> <meta charset="UTF-8" /> <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <meta http-equiv="cache-control" content="no-store, max-age=0, must-revalidate" /> <link rel="preconnect" href="https://fonts.googleapis.com" async> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet"> --> <link media="handheld" href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet" async> <link rel="icon" type="image/x-icon" href="assets/vrnl_favicon.png" /> <link rel="canonical" href="https://vrnl.net/#/" /> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <meta name="keywords" content="Sports Betting software provider company, cricket Betting software provider, horse racing Betting software provider, Sports betting software provider, iGaming Platform,Casino,Online Casino,Virtual Games,API service provider,eSports Betting Software, Online Exchange software, Betting Providers, Casino Providers,Online Exchange software " />  <meta name="google-site-verification" content="93xqYXaCi2bsHFO5k7if3wCp3fjz1CIPWFK9no2UDzQ" /> <!--Start of Tawk.to Script--> <script type="text/javascript"> var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date(); (function () { var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0]; s1.async = true; s1.src = "https://embed.tawk.to/651bb24110c0b2572487f8a1/1hbq30kna"; s1.charset = "UTF-8"; s1.setAttribute("crossorigin", "*"); s0.parentNode.insertBefore(s1, s0); })(); </script> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" ></script> <!-- Google anyaltics --> <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-2KBE1FKGMX" ></script> <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", "G-2KBE1FKGMX"); </script> </head> <body> <app-root></app-root> </body></html>
