changes in content and images

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Vrnl is Top Sports Betting Software Provider in India and Bangladesh </title>
+    <title> Vrnl is Top Sports Betting Software Provider in Bangladesh </title>
     <meta name="description"
-        content="VRNL is a leading sports betting software provider in India. Their White Label sport bettng software, with an integrated casino platform, offers flexibility for operators. It allows customization to meet branding needs" />
+        content="VRNL is a leading sports betting software provider in Bangladesh. Their White Label sport bettng software, with an integrated casino platform, offers flexibility for operators. It allows customization to meet branding needs" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
